Fix top bar and sidebar appearing in settings popup; align small mode category menu toggle

--- a/webpages/settings/style.css
+++ b/webpages/settings/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 12px;
 }
 
-[v-cloak] {
+:not(body)[v-cloak] {
   display: none !important;
 }
 
@@ -294,6 +294,25 @@ body.iframe .search-box input {
 }
 .flipped {
   transform: scaleX(-1);
+}
+
+/* Hide categories and prevent logo from jumping while loading in the popup and small mode */
+@media (max-width: 1099px) {
+  body[v-cloak] .logo {
+    margin-inline-start: 42px;
+  }
+
+  body[v-cloak] .categories-block,
+  body[v-cloak] .categories-shrink {
+    display: none;
+  }
+}
+
+/* Hide top bar while loading in the popup */
+@media (max-width: 400px) {
+  body[v-cloak] .navbar {
+    display: none;
+  }
 }
 
 .permissions div.main {
