--- a/webpages/styles/components/smallmode.css
+++ b/webpages/styles/components/smallmode.css
@@ -15,5 +15,6 @@
   cursor: pointer;
   width: 24px;
   height: 24px;
-  margin-inline-end: 10px;
+  margin-inline-start: 13px;
+  margin-inline-end: 5px;
 }
